force-app/main/default/objects/CargaVoo__c/CargaVoo__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena as medidas e anexos da carga a ser transportada em um voo</description>
    <label>Carga do Voo</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cargas do Voo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>