force-app/main/default/objects/CargaVoo__c/fields/Altura__c.field-meta.xml
<CustomField>
    <fullName>Altura__c</fullName>
    <description>Altura da carga em cm</description>
    <inlineHelpText>Altura da carga em cm</inlineHelpText>
    <label>Altura (cm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>