force-app/main/default/objects/CargaVoo__c/fields/CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoCliente__c</fullName>
    <label>Código Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>