force-app/main/default/objects/CargaVoo__c/fields/Identificacao__c.field-meta.xml
<CustomField>
    <fullName>Identificacao__c</fullName>
    <label>Identificação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>