force-app/main/default/objects/CargaVoo__c/fields/Largura__c.field-meta.xml
<CustomField>
    <fullName>Largura__c</fullName>
    <description>Largura da carga em cm</description>
    <inlineHelpText>Largura da carga em cm</inlineHelpText>
    <label>Largura (cm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>