force-app/main/default/objects/CargaVoo__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <description>Observações a respeito da carga</description>
    <inlineHelpText>Observações a respeito da carga</inlineHelpText>
    <label>Descrição</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>