force-app/main/default/objects/CargaVoo__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <description>Peso unitário da carga.</description>
    <inlineHelpText>Peso unitário da carga.</inlineHelpText>
    <label>Peso (kg)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>