force-app/main/default/objects/CargaVoo__c/fields/Profundidade__c.field-meta.xml
<CustomField>
    <fullName>Profundidade__c</fullName>
    <description>Profundidade da carga em cm</description>
    <inlineHelpText>Profundidade da carga em cm</inlineHelpText>
    <label>Profundidade (cm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>