force-app/main/default/objects/CargaVoo__c/fields/Voo__c.field-meta.xml
<CustomField>
    <fullName>Voo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Voo em que a carga vai estar presente</description>
    <inlineHelpText>Voo em que a carga vai estar presente</inlineHelpText>
    <label>Voo</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Cargas do Voo</relationshipLabel>
    <relationshipName>CargasVoo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>